2023-03-22 | fixed horizontal scroll issue on mobile

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -161,7 +161,7 @@ iframe {
 }
 
 .pad-24 {
-  padding: 24px;
+  padding: 24px 30px;
 }
 
 .txt-center {
